background + some tps

--- a/index.html
+++ b/index.html
@@ -16,30 +16,90 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>20 hints to make a better presentation</section>
-				<section>Tip 1: Maintain eye contact while presenting and smile</section>
-				<section>Tip 2: Use of gestures and facial expressionse</section>
-				<section>Tip 3: Avoid distractions</section>
-				<section>Tip 4: Be prepared: Practice makes perfect</section>
-				<section>Tip 5: Be confident</section>
-				<section>Tip 6: Effective beginning/end</section>
-				<section>Tip 7: Speak freely</section>
-				<section>Tip 8: Avoid filler words</section>
-				<section>Tip 9: Bring along something to share</section>
-				<section>Tip 10: Use different types of media</section>
-				<section>Tip 11: Use effective pauses</section>
-				<section>Tip 12: Speak the language of the audience</section>
-				<section>Tip 13: Engage with the audience</section>
-				<section>Tip 14: Don't fight the stage fright & take deep breaths</section>
-				<section>Tip 15: Choose the right angle on standing during a presentation</section>
-				<section>Tip 16: Limit the amount of copy of each line</section>
-				<section>Tip 17: Be genuine</section>
-				<section>Tip 18: Use a pause for key takeaways</section>
-				<section>Tip 19: Stick to two or three colors</section>
-				<section>.</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					<h2>20 hints to make a better presentation</h2>
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 1: Maintain eye contact while presenting and smile
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 2: Use of gestures and facial expressionse
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 3: Avoid distractions
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					<section>
+						Tip 4: Be prepared: Practice makes perfect
+					</section>
+					<section>
+						◽ Rehearse in front of a crowd
+					</section>
+					<section>
+						◽ Take notes
+					</section>
+					<section>
+						◽ Experiment
+					</section>
+					<section>
+						◽ Time yourself
+					</section>
+					<section>
+						◽ Record yourself
+					</section>
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 5: Be confident
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 6: Effective beginning/end
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 7: Speak freely
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 8: Avoid filler words
+					</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 9: Bring along 
+					something to share</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 10: Use different types of media
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 11: Use effective pauses
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 12: Speak the language of the audience
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 13: Engage with the audience
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 14: Don't fight the stage fright & take deep breaths
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 15: Choose the right angle on standing during a presentation
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 16: Limit the amount of copy of each line
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 17: Be genuine
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 18: Use a pause for key takeaways
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 19: Stick to two or three colors
+				</section>
+				<section data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)">
+					Tip 20:
+				</section>
 
 
-			</div>
+			</
+			div>
 		</div>
 
 		<script src="dist/reveal.js"></script>
